...
    <View style={styles.container}>
      <Text style={styles.title} numberOfLines={1} ellipsizeMode="tail">
        {title}
      </Text>
      {badgeCount !== undefined && (
        <View style={styles.badge}>
          <Text style={styles.badgeText} testID="list-header-badge-count">
            {badgeCount}
          </Text>
        </View>
      )}
    </View>
  );
...
